--- a/手机接入教程.md
+++ b/手机接入教程.md
@@ -24,6 +24,11 @@ pkg upgrade -y && pkg install proot -y && termux-chroot
 ### 4、执行指令接入hub
 
 #### 接入指令：
+
+直接运行：
+curl -fsSL https://files.node-x.xyz/stor-setup-dev-test/install.sh | bash -s -- -token=token值 --foreground
+
+后台运行：
 curl -fsSL https://files.node-x.xyz/stor-setup-dev-test/install.sh | bash -s -- -token=token值
 
 #### 安装成功：
