--- a/手机接入教程.md
+++ b/手机接入教程.md
@@ -19,7 +19,7 @@
 </div>
 
 ### 3、下载成功后，需要安装些工具，请执行下方指令
-pkg upgrade -y && pkg install proot -y && termux-chroot
+DEBIAN_FRONTEND=noninteractive pkg upgrade -y && pkg install proot -y && termux-chroot
 
 ### 4、执行指令接入hub
 
